--- a/_data/program.yml
+++ b/_data/program.yml
@@ -2,52 +2,52 @@
   title: 'Why My Voice Is Important'
   milestones:
     - text: 'Speech Writing'
-      icon: ''
+      icon: 'pencil.svg'
     - text: 'Public Speaking'
-      icon: ''
+      icon: 'chat-bubble.svg'
     - text: 'T-Shirt Design' 
-      icon: ''
+      icon: 'mouse.svg'
     - text: 'iMovie Creation on the 7 Habits of Highly Effective Teens' 
-      icon: ''
+      icon: 'mouse.svg'
     - text: 'Five Practices of Exemplary Leadership' 
-      icon: ''
+      icon: 'book.svg'
     - text: 'Service Projects'
-      icon: ''
+      icon: 'bolt.svg'
 - year: 2
   title: 'How My Passion Impacts the World'
   milestones:
     - text: 'Review of Five Practices of Exemplary Leadership' 
-      icon: ''
+      icon: 'book.svg'
     - text: 'Writing Reflections' 
-      icon: ''
+      icon: 'pencil.svg'
     - text: 'Speech Writing' 
-      icon: ''
+      icon: 'pencil.svg'
     - text: 'Public Speaking'
-      icon: ''
+      icon: 'chat-bubble.svg'
     - text: 'Research Non-profits'
-      icon: ''
+      icon: 'book.svg'
     - text: 'Team Presentations' 
-      icon: ''
+      icon: 'book.svg'
     - text: 'iMovie Creation promoting your school' 
-      icon: ''
+      icon: 'mouse.svg'
     - text: 'Volunteer hours at a local non-profit'
-      icon: ''
+      icon: 'bolt.svg'
 - year: 3
   title: 'How My Optimism Leads to a Greater Future'
   milestones:
     - text: 'Career Interest Inventory' 
-      icon: ''
+      icon: 'bolt.svg'
     - text: 'Research Career Options'
-      icon: ''
+      icon: 'book.svg'
     - text: 'Develop plan/goals for future'
-      icon: ''
+      icon: 'book.svg'
     - text: 'Individual Presentation “Roadmap to My Future”' 
-      icon: ''
+      icon: 'chat-bubble.svg'
     - text: 'Speech Writing'
-      icon: ''
+      icon: 'pencil.svg'
     - text: 'Public Speaking'
-      icon: ''
+      icon: 'chat-bubble.svg'
     - text: 'College Visits'
-      icon: ''
+      icon: 'bolt.svg'
     - text: 'Job Shadowing'
-      icon: ''
+      icon: 'bolt.svg'
