--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,14 @@
 # Site settings
 title: HOPE Leadership Academy
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: >
+  The purpose of HOPE Leadership Academy is to identify students who have leadership potential, 
+  provide leadership and mentoring training through our three year, service oriented program, 
+  and furnish program graduates as peer mentors to students in poverty.  Our goal is to decrease 
+  the dropout rate and thus improve the quality of life in our schools, communities, and state.
 baseurl: "/HOPE" # the subpath of your site, e.g. /blog/
 url: "" # the base hostname & protocol for your site
+link: http://hopeleadershipacademy.org
+image: "{{ site.baseurl }}/assets/img/HOPE_logo.svg"
 
 # Build settings
 markdown: kramdown
