Updates and bug fixes from client feedback

--- a/_data/tiers.yml
+++ b/_data/tiers.yml
@@ -74,4 +74,4 @@
           • Highlighted on program day agendas, including company logo<br>
           • Highlighted in debrief emails to parents, students, and teachers throughout the week.<br>
           • Recognized at local Board of Education by school board members and Superintendent<br>
-          • Company name and logo on our Social Media page (FACEBOOK) and blasts.
+          • Company name and logo on our Social Media pages and blasts.
